Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60342

qabstract3dgraph.cpp:1164:67: error: call of overloaded ‘QOffscreenSurface(TestNamespace::QScreen*)’ is ambiguous

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • None
    • 5.10
    • Data Visualization
    • None

    Description

      https://codereview.qt-project.org/#/c/192317/
      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1492846809
      https://testresults.qt.io/coin/api/results/qt/qtdatavis3d/72641f2dc53522ca1959ac8c1d06692303c3a17b/LinuxUbuntu_16_04x86_64LinuxUbuntu_16_04x86_64GCCqtci-linux-Ubuntu-16.04-x86_64-f11462DeveloperBuild_OutOfSourceBuild_QtLibInfix_QtNamespace/b5e30d3ff3f79c864efe040c849bb53ee4bfc26c/build_1492848566/buildlog.txt.gz

      /home/qt/work/qt/qtdatavis3d/src/datavisualization/engine/qabstract3dgraph.cpp: In member function ‘TestNamespace::QImage QtDataVisualization::QAbstract3DGraphPrivate::renderToImage(int, const TestNamespace::QSize&)’:
      /home/qt/work/qt/qtdatavis3d/src/datavisualization/engine/qabstract3dgraph.cpp:1164:67: error: call of overloaded ‘QOffscreenSurface(TestNamespace::QScreen*)’ is ambiguous
               m_offscreenSurface = new QOffscreenSurface(q_ptr->screen());
                                                                         ^
      In file included from /home/qt/work/install/include/QtCore/QtCore:4:0,
                       from ../../include/QtDataVisualization/QtDataVisualizationDepends:3:
      /home/qt/work/install/include/QtGui/qoffscreensurface.h:96:20: note: candidate: TestNamespace::QOffscreenSurface::QOffscreenSurface(const TestNamespace::QOffscreenSurface&) <deleted>
           Q_DISABLE_COPY(QOffscreenSurface)
                          ^
      /home/qt/work/install/include/QtCore/qglobal.h:324:5: note: in definition of macro ‘Q_DISABLE_COPY’
           Class(const Class &) Q_DECL_EQ_DELETE;\
           ^
      In file included from /home/qt/work/install/include/QtGui/QtGui:40:0,
                       from ../../include/QtDataVisualization/QtDataVisualizationDepends:4:
      /home/qt/work/install/include/QtGui/qoffscreensurface.h:62:14: note: candidate: TestNamespace::QOffscreenSurface::QOffscreenSurface(TestNamespace::QScreen*)
           explicit QOffscreenSurface(QScreen *screen = Q_NULLPTR);
                    ^
      /home/qt/work/install/include/QtGui/qoffscreensurface.h:61:14: note: candidate: TestNamespace::QOffscreenSurface::QOffscreenSurface(TestNamespace::QScreen*, TestNamespace::QObject*)
           explicit QOffscreenSurface(QScreen *screen, QObject *parent = Q_NULLPTR);
                    ^
      Makefile:14206: recipe for target '.obj/qabstract3dgraph.o' failed
      make[2]: *** [.obj/qabstract3dgraph.o] Error 1
      make[2]: *** Waiting for unfinished jobs....
      make[2]: Leaving directory '/home/qt/work/build/src/datavisualization'
      Makefile:45: recipe for target 'sub-datavisualization-make_first-ordered' failed
      make[1]: *** [sub-datavisualization-make_first-ordered] Error 2
      make[1]: Leaving directory '/home/qt/work/build/src'
      Makefile:46: recipe for target 'sub-src-make_first' failed
      make: *** [sub-src-make_first] Error 2
      

      Attachments

        For Gerrit Dashboard: QTBUG-60342
        # Subject Branch Project Status CR V

        Activity

          People

            peppe Giuseppe D'Angelo
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes