QOffscreenSurface: fix blunder

7be9653f1288d32bc732262b01ba910f6a321ecd added a new constructor
taking the parent QObject. However, it broke code building an object
and passing 1 parameter to the constructor (the call is now ambiguous).
Disambiguate.

Task-number: QTBUG-60342
Change-Id: I3a36f01ebb52c7aaa4c4cdf5e2c5f37c1255bc8a
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>