src/gui/kernel/qoffscreensurface.h
@@ -58,7 +58,7 @@ class Q_GUI_EXPORT QOffscreenSurface : public QObject, public QSurface
 
 public:
     // ### Qt 6: merge overloads
-    explicit QOffscreenSurface(QScreen *screen, QObject *parent = Q_NULLPTR);
+    explicit QOffscreenSurface(QScreen *screen, QObject *parent);
     explicit QOffscreenSurface(QScreen *screen = Q_NULLPTR);
     virtual ~QOffscreenSurface();
 
